# users-demo

./: .gitignore  LICENCE  README.MD  dev-requirements.txt  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/worfflows/: flake8-mypy-build.yml
.github/workflows/: codeql-analysis.yml  codeql_analysis.yml  flake8-mypy-build.yml
src/: main.py  redis_conf.py
src/config/: mongo_conf.py  redis_conf.py  variables.py
src/dal/: userdal.py
src/events/: consumer.py
src/models/: user.py
src/users/: main.py
src/users.egg-info/: PKG-INFO  SOURCES.txt
src/users/models/: user.py
src/users/redis/: conf.py  dal.py
tests/: conftest.py  dal_test.py  redis_connection_test.py  test_dal.py  test_esdpoints.py  test_redis_connection.py
