[metadata]
name = users
version = 0.0.1
author = Yassine Nacif
author_email = nacifyas@gmail.com
description = Dummy project
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Bug Tracker = https://github.com/nacifyas/atomflare_web/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = file: requirements.txt -r

[options.packages.find]
where = src